[tool.poetry]
name = "flask-prog"
version = "0.1.0"
description = ""
authors = ["<Андрей Марк> <<markandreym@gmail.com>>"]
readme = "README.md"
packages = [{include = "flask_prog"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
